@@ -1,5 +1,6 @@
     Source files moved to src/ subdirectory
     Maven 2.2 build system added
+    GNU makefile and SCons build systems removed
 0.7
 	Nice directory listings with file size and last modification time!
         Added tagline to generated error messages
